Fix broken style

--- a/apps/frontend-angular/src/styles.css
+++ b/apps/frontend-angular/src/styles.css
@@ -19,7 +19,6 @@
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     margin: 10px;
     padding: 5%;
-    width: 45%;
   }
 
   .content {
@@ -76,12 +75,14 @@
   .error-message {
     color: red;
     font-size: 15px;
+    margin-left: 20px;
   }
 
   .input {
     padding: 10px;
     font-size: 12px;
     margin-bottom: 20px;
+    margin-left: 15px;
   }
 
   .textarea {
@@ -111,7 +112,7 @@
     margin-top: 12px;
   }
 
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 768px) {
    .cards {
     width: 100%;
     height: 100%;
